WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
298865
Fix smart pointers errors with CFRunLoopGetMain()/CFRunLoopGetCurrent()
https://bugs.webkit.org/show_bug.cgi?id=298865
Summary
Fix smart pointers errors with CFRunLoopGetMain()/CFRunLoopGetCurrent()
Frédéric Wang (:fredw)
Reported
2025-09-15 06:52:07 PDT
https://developer.apple.com/documentation/corefoundation/cfrunloopgetcurrent()?language=objc
https://developer.apple.com/documentation/corefoundation/cfrunloopgetmain()?language=objc
Ownership follows the The Get Rule, so they need a RetainPtr
Attachments
Add attachment
proposed patch, testcase, etc.
Frédéric Wang (:fredw)
Comment 1
2025-09-16 01:41:34 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/50795
EWS
Comment 2
2025-09-16 05:46:22 PDT
Committed
300027@main
(1af87bb4a5ef): <
https://commits.webkit.org/300027@main
> Reviewed commits have been landed. Closing PR #50795 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-09-22 06:52:37 PDT
<
rdar://problem/161092311
>
Radar WebKit Bug Importer
Comment 4
2025-09-22 06:52:38 PDT
<
rdar://problem/161092482
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug