Fix smart pointers errors with CFRunLoopGetMain()/CFRunLoopGetCurrent() https://bugs.webkit.org/show_bug.cgi?id=298865

Reviewed by Chris Dumez.

Ownership follows the The Get Rule, so they need a RetainPtr:
https://developer.apple.com/documentation/corefoundation/cfrunloopgetcurrent()?language=objc
https://developer.apple.com/documentation/corefoundation/cfrunloopgetmain()?language=objc

* Source/WebKit/SaferCPPExpectations/UnretainedCallArgsCheckerExpectations:
* Source/WebKit/UIProcess/WebAuthentication/Cocoa/HidConnection.mm:
(WebKit::HidConnection::initialize):
(WebKit::HidConnection::terminate):
* Source/WebKit/UIProcess/WebAuthentication/Cocoa/HidService.mm:
(WebKit::HidService::~HidService):
(WebKit::HidService::platformStartDiscovery):
* Source/WebKit/UIProcess/mac/WebViewImpl.mm:
(WebKit::WebViewImpl::computeHasVisualSearchResults):
* Source/WebKit/WebProcess/WebPage/WebDisplayRefreshMonitor.cpp:
(WebKit::WebDisplayRefreshMonitor::startNotificationMechanism):
* Source/WebKit/webpushd/webpushtool/WebPushToolMain.mm:
(WebKit::WebPushToolVerb::done):

Canonical link: https://commits.webkit.org/300027@main